--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.jpa.hibernate.ddl-auto = update
 
 # -> Acesso ao banco de dados (projeto_angular_spring ? o nome da tabela que eu criei no banco de dados)
-spring.datasource.url=jdbc:mysql://localhost:3306/base
+#Tentativas de conectar com o docker mysql na orange py
+spring.datasource.url=jdbc:mysql://192.168.15.23:3306/base
 
 # -> Usu?rio e senha do banco de dados
 spring.datasource.username=root
-spring.datasource.password=rhythms
+spring.datasource.password=parigot3901
 
 # -> porta pra acessar meu localhost
 server.port = 8090
